<resources>
    <string name="app_name">GoGrocery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="need_permissions">Need Permissions</string>
    <string name="this_app_needs_permission_to_use_this_feature">Allow Gogrocery to access this device location.</string>
    <string name="go_to_settings">GOTO SETTINGS.</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="delivery_charge">Delivery Charges</string>
    <string name="estimated_tax">Estimated Tax</string>
    <string name="total_amount">Total Amount</string>
    <string name="total">Total</string>
    <string name="error_something_went_wrong">Something went wrong,\n please try again.</string>
    <string name="error_no_store_msg">There are no such stores available in this area yet.</string>
    <string name="error_no_delivery_msg">We don\’t deliver to your location</string>
    <string name="error_try_again_later">Try again later.</string>
    <string name="error_no_product_fount">No Product Found!</string>
    <string name="current_curremcy">AED</string>
    <string name="current_curremcy_zero">AED 0.00</string>
    <string name="something_went_wrong">Something went wrong! Try again later</string>
    <string name="default_notification_channel_id">com.gogrocery</string>
    <string name="ltgg">Login to GoGrocery</string>
    <string name="username">Username or Mobile No.</string>
    <string name="password">Password</string>
    <string name="signin">SIGN IN</string>
    <string name="forgetpass">Forgot Password?</string>
    <string name="logiin_opt">Or login with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="no_acc_signup">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="filed_empty_error">This field cannot be empty</string>
    <string name="login_field_error">Please enter valid email id</string>
    <string name="login_password_error">Please enter password</string>
    <string name="tvText_not_wishlist_item_Found"> Your Wishlist is empty!</string>
    <string name="wlcm_grocry">Welcome to GoGrocery</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="mobileno">Mobile No</string>
    <string name="emailaddress">Email Address</string>
    <string name="register_opt">Or register with</string>
    <string name="already_acc">Already have an account?</string>
    <string name="signin_">Sign In</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="add">Add</string>
    <string name="no">No</string>
    <string name="_50">50   </string>
    <string name="_52">52 </string>
    <string name="_53">53 </string>
    <string name="_54">54 </string>
    <string name="_55">55 </string>
    <string name="_56">56 </string>
    <string name="_58">58 </string>
    <string name="forgetpass_page">Forgot Password</string>
    <string name="forgetpass_txt1">Confirm your email address\n and we\'ll send you the instructions</string>
    <string name="srl">SEND RESET LINK</string>
    <string name="vw_cart">View Cart</string>
    <string name="sbc">Shop By Category</string>
    <string name="dotd">Deals Of The Day</string>
    <string name="bsp">Best Selling Products</string>
    <string name="show_all">Show All</string>
    <string name="home_sbb">Shop By Brand</string>
    <string name="atc">ADD TO CART</string>
    <string name="side_menu_mo">My Orders</string>
    <string name="side_menu_home">Change Location</string>
    <string name="side_menu_change_store">Change Store</string>
    <string name="side_menu_sbc">Shop by Category</string>
    <string name="side_menu_mc">My Cart</string>
    <string name="side_menu_mw">My Wishlist</string>
    <string name="side_menu_mf">My Favorites</string>
    <string name="side_menu_ma">My Account</string>
    <string name="side_menu_cs">Contact Us</string>
    <string name="side_menu_set">Settings</string>
    <string name="side_menu_ovp">Vision &amp; Purpose</string>
    <string name="side_menu_au">About Us</string>
    <string name="side_menu_pp">Privacy Policy</string>
    <string name="side_menu_tc">Terms &amp; Conditions</string>
    <string name="side_menu_qs">Quality standards</string>
    <string name="side_menu_noti">Notifications</string>
    <string name="myaccount">My Account</string>
    <string name="myorders">My Orders</string>
    <string name="product_substitutions">Product Substitutions</string>
    <string name="myaddresses">My Addresses</string>
    <string name="mywallet">My Wallet &amp; cards</string>
    <string name="accsetting">Account Setting</string>
    <string name="notipref">Notification Preferences</string>
    <string name="msl"> My Save List</string>
    <string name="logout">Logout</string>
    <string name="sort_option">Sort Options</string>
    <string name="popularity">Popularity</string>
    <string name="phtl">Price - High to Low</string>
    <string name="plth">Price - Low to High</string>
    <string name="newest_first">New Arrivals</string>
    <string name="dhtl">Discount - High to Low</string>
    <string name="dlth">Discount - Low to High</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="alphabetically_sort">List Alphabetically A-Z</string>
    <string name="dialogPositiveButtonText_cancel">@string/cancel</string>
    <string name="acc_setting_title">Account Settings</string>
    <string name="acc_setting_fn">First Name</string>
    <string name="acc_setting_ln">Last Name</string>
    <string name="acc_setting_ea">Email Address</string>
    <string name="acc_setting_mn">Mobile No.</string>
    <string name="acc_setting_gender">Gender</string>
    <string name="acc_setting_cp">Change Password</string>
    <string name="acc_setting_da">Deactivate Account</string>
    <string name="acc_setting_sc">SAVE CHANGES</string>
    <string name="dialogPositiveButtonText_delete">Delete</string>
    <string name="dialogTitle_deleteFromMyAddress">Confirm Delete?</string>
    <string name="dialogMessage_deleteFromMyAddress">Do you want to delete this Address?</string>
    <string name="change_password_title">Change Password</string>
    <string name="change_password_cp">Current Password</string>
    <string name="change_password_np">New Password</string>
    <string name="change_password_cnp">Confirm New Password</string>
    <string name="change_password_update">Update</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="ioat">(Inclusive of all taxes.)</string>
    <string name="note_price_change">Please note that the final price of the product may vary due to weight variations</string>
    <string name="dummy_detail_page_offer1">Instant 10% Cashback on ICICI Bank Debit Cards. (T&amp;C)</string>
    <string name="dummy_detail_page_offer2">Bank Offer Extra 5% off* with Axis Bank Buzz Credit Card. (T&amp;C)</string>
    <string name="available_in">Available In:</string>
    <string name="detail_pd">PRODUCT DESCRIPTION</string>
    <string name="detail_ingrdients">INGREDIENTS</string>
    <string name="details_opi">OTHER PRODUCT INFO</string>
    <string name="similar_product">Similar Products</string>
    <string name="related_product">Related Products</string>
    <string name="rate_product">RATE PRODUCT</string>
    <string name="my_cart_title">My Cart</string>
    <string name="my_cart_options">OPTIONS</string>
    <string name="my_cart_apc">Apply Promo Code</string>
    <string name="my_cart_os">ORDER SUMMARY</string>
    <string name="my_cart_subtotal">Sub-total</string>
    <string name="my_cart_discount">Discount</string>
    <string name="my_cart_dc">Delivery Charges</string>
    <string name="my_cart_sc">Shipping Cost</string>
    <string name="my_cart_et">Estimated Tax</string>
    <string name="my_cart_ta">Total Amount</string>
    <string name="my_cart_checkout">Checkout</string>
    <string name="my_cart_po">PLACE ORDER</string>
    <string name="my_cart_vpd">view price details</string>
    <string name="my_cart_atc">ADD  TO  CART</string>
    <string name="my_cart_gtc">GO  TO  CART</string>
    <string name="my_cart_wishlist">WISHLIST</string>
    <string name="my_cart_rc">Reedem Coupon</string>
    <string name="enter_valid_code">Enter valid code</string>
    <string name="please_select_any_reason">Please select any reason</string>
    <string name="listing_sort">Sort</string>
    <string name="listing_filtert">Filters</string>
    <string name="delivery_details_title">Delivery Details</string>
    <string name="delivery_details_da">Delivery Address</string>
    <string name="delivery_details_coaa">CHANGE OR ADD ADDRESS</string>
    <string name="delivery_details_do">Delivery Options</string>
    <string name="add_new_address_title">Add A New Address</string>
    <string name="add_new_address_name">Name</string>
    <string name="add_new_address_fname">First Name</string>
    <string name="add_new_address_lname">Last Name</string>
    <string name="add_new_address_anhnsn">Building name or number</string>
    <string name="add_new_address_hnosn">Flat or House number</string>
    <string name="add_new_address_nl">Nearest Landmark</string>
    <string name="add_new_address_country">Country</string>
    <string name="add_new_address_city">City</string>
    <string name="add_new_address_state">State</string>
    <string name="add_new_address_pincode">Pincode</string>
    <string name="add_new_address_mn">Mobile No.</string>
    <string name="add_new_address_da">Set this as my default delivery address</string>
    <string name="add_new_address_cancel">CANCEL</string>
    <string name="add_new_alternative">Alternative Mobile Number</string>
    <string name="add_new_address_save">SAVE</string>
    <string name="add_new_address_error_n">Name should not be empty</string>
    <string name="add_new_address_error_field_empty">Should not be empty</string>
    <string name="add_new_address_error_area">Area should not be empty</string>
    <string name="add_new_address_error_fn">First Name should not be empty</string>
    <string name="add_new_address_error_ln">Last Name should not be empty</string>
    <string name="add_new_address_error_an">Apartment Name should not be empty</string>
    <string name="add_new_address_error_sn">House No and Street Name should not be empty</string>
    <string name="add_new_address_error_nl">Landmark should not be empty</string>
    <string name="add_new_address_error_country">Country should not be empty</string>
    <string name="add_new_address_error_city">City should not be empty</string>
    <string name="add_new_address_error_mobile">Mobile No. should not be empty</string>
    <string name="slide_1_desc">GoGrocery uses location services in order to determine proximity of listed business and only while you are using the application</string>
    <string name="welcome_gogrocery">Welcome GoGrocery</string>
    <string name="enable_location_service">Enable Location Service</string>
    <string name="sort_by">Sort By</string>
    <string name="are_you_sure_that_you_want_to_reject_the_substitutions">Are you sure that you want to reject the substitutions?</string>
    <string name="you_don_t_want_any_replacement">You Don\'t Want Any Replacement?</string>
    <string name="if_you_change_store_your_cart_will_be_empty">If you change store, Your cart will be empty.</string>
    <string name="do_you_really_want_to_change_store">Do you really want to change store ?</string>
</resources>