<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_margin="42dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView

            android:id="@+id/txt"
            android:text="@string/if_you_change_store_your_cart_will_be_empty"
            android:textColor="@color/black"
            android:fontFamily="@font/hind_semibold"
            android:textSize="24sp"
            android:ellipsize="end"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView

            android:layout_marginTop="8dp"
            android:id="@+id/txt1"
            android:text="@string/do_you_really_want_to_change_store"
            android:textColor="@color/app_red_clr"
            android:fontFamily="@font/hind"
            android:textStyle="bold"
            android:textSize="16sp"
            android:ellipsize="end"
            android:textAlignment="center"
            android:layout_below="@+id/txt"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_below="@+id/txt1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnNo"
                android:background="@drawable/app_red_bg"
                android:layout_weight="1"
                android:text="@string/no"
                android:ellipsize="end"
                android:textAlignment="center"
                android:layout_margin="8dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnYes"
                android:layout_margin="8dp"
                android:textColor="@color/white"
                android:background="@drawable/green_btn_ng"
                android:layout_weight="1"
                android:text="@string/yes"
                android:ellipsize="end"
                android:textAlignment="center"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>