<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen1_green">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <TextView

            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_gogrocery"
            android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />
        <ImageView
            android:layout_marginTop="64dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/location_intro_pin"
            tools:ignore="ContentDescription" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/slide_1_desc"
            android:fontFamily="@font/montserrat"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc" />

        <TextView
            android:id="@+id/tvSliderOneNext"
            android:background="@drawable/white_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/enable_location_service"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc" />

    </LinearLayout>


</RelativeLayout>